Added background color

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,9 +18,5 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
+  background: rgb(209 213 219);
 }
