--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+  height: 100%
 }
 
 @media (prefers-color-scheme: dark) {
@@ -19,4 +20,5 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: rgb(209 213 219);
+  height: 100%
 }
